<resources>
    <string name="app_name">All Packages Detail</string>
    <string name="Title">All Packages Detail(2020)</string>
    <string name="btn2">jazz</string>
    <string name="btn3">Telenor</string>
    <string name="btn4">Zong</string>
    <string name="btn5">Warid</string>
    <string name="btn6">Ufone</string>
    <string name="title_activity_tabbed">tabbed</string>
    <string-array name="jazzdatadata_name">
        <item>DAILY SOCIAL RECURSIVE</item>
        <item>DAILY SOCIAL</item>
        <item>Daily Browser</item>
        <item>DAILY PEAK OFF-PEAK</item>
        <item>Weekly Social</item>
        <item>WEEKLY YOUTUBE OFFER</item>
        <item>WEEKLY PREMIUM</item>
        <item>WEEKLY MEGA</item>
        <item>WEEKLY PLUS</item>
        <item>WEEKLY MEGA PLUS</item>
        <item>WEEKLY STREAMER</item>
        <item>MONTHLY BROWSER</item>
        <item>MONTHLY MEGA</item>
        <item>MONTHLY MEGA PLUS</item>
        <item>MONTHLY SUPREME</item>


    </string-array>
    <string-array name="jazzdatadata_description">
         <item>
           200 MB DATA\n(Facebook and Whatsapp)\n<b>Price</b>          Rs.5.98\n<b>Code</b>             Dial *455#
        <b>Validity</b> 1 Day
    </item>
        <item>
        500 MB DATA\n(Facebook and WhatsApp)
        \n<b>Code</b> Rs.7.00 (Incl.Tax)Recharge Required PKR 90		Dial *114*5#
        <b>Validity</b> 1 Day
    </item>
        <item>
        100 MB DATA (24 Hours) \n1.1 GB in Off Peak (2 AM – 2 PM) \n <b>Price</b>          Rs.24 (Incl. Tax)\n<b>Code</b>             *117*4#
        \n <b>Validity</b> 1 Day</item>
        <item>5 GB DATA for IMO, WhatsApp and Facebook\n <b>Price</b>           Rs.60 (Incl. Tax)\n<b>Code</b>             Dial *660#
        \n <b>Validity</b> 7 Day</item>
        <item>5 GB DATA
        <b>Price</b>           Rs.80 (Incl. Tax)\n<b>Code</b>             Dial *570#
        \n <b>Validity</b> 7 Day</item>
        <item>3 GB DATA
        <b>Price</b>           Rs.140 (Incl. Tax)Recharge Required Rs.158\n<b>Code</b>             Dial *117*47#
        \n <b>Validity</b> 7 Day</item>
        <item>7 GB DATA
        <b>Price</b>           Rs.200 (Incl. Tax)Recharge Required Rs.225\n<b>Code</b>             Dial *159#
        \n <b>Validity</b> 7 Day</item>
        <item>12 GB DATA \n (6GB 2 AM – 2 PM)
        <b>Price</b>           Rs.210 (Incl. Tax)Recharge Required Rs.230\n<b>Code</b>             Dial *157#
        \n <b>Validity</b> 7 Day</item>
        <item>12 GB DATA \n (6GB 2 AM – 2 PM)
        <b>Price</b>           Rs.210 (Incl. Tax)Recharge Required Rs.250\n<b>Code</b>             Dial *157#
        \n <b>Validity</b> 7 Day</item>
        <item>1 GB DATA \n
        <b>Price</b>           Rs.95 (Incl. Tax)Recharge Required Rs.107\n<b>Code</b>             Dial *117*7#
        \n <b>Validity</b> 7 Day</item>
        <item>4 GB DATA \n(2 GB 2 AM – 2 PM)\n
        <b>Price</b>           Rs.215 (Incl. Tax)Recharge Required Rs.242\n<b>Code</b>             Dial *117*77#
        \n <b>Validity</b> 30 Day</item>
        <item>4 GB DATA \n(2 GB 2 AM – 2 PM)
        <b>Price</b>           Rs.215 (Incl. Tax)Recharge Required Rs.242\n<b>Code</b>             Dial *117*77#
        \n <b>Validity</b> 30 Day</item>
        <item>12 GB DATA \n (6GB 2 AM – 2 PM)
        <b>Price</b>           Rs.600 (Incl. Tax)Recharge Required Rs.675\n<b>Code</b>             Dial *117*30#
        \n <b>Validity</b> 30 Day</item>
        <item>12 GB DATA \n (6GB 2 AM – 2 PM)
        <b>Price</b>           Rs.600  (Incl. Tax)Recharge Required Rs.675*\n<b>Code</b>             Dial *117*32#
        \n <b>Validity</b> 30 Day</item>
        <item>20 GB DATA \n (10GB 2 AM – 2 PM)
        <b>Price</b>           Rs.885  (Incl. Tax)Recharge Required Rs.996*\n<b>Code</b>             Dial *117*32#
        \n <b>Validity</b> 30 Day</item>

    </string-array>
    <string-array name="jazzdatadata_code">
        <item>*455%23</item>
        <item>*114*5%23</item>
        <item>*117*11%23</item>
        <item>*117*4%23</item>
        <item>*660%23</item>
        <item>*570%23</item>
        <item>*117*47%23</item>
        <item>*159%23</item>
        <item>*157%23</item>
        <item>*453%23</item>
        <item>*117*7%23</item>
        <item>*117*77%23</item>
        <item>*117*31%23</item>
        <item>*117*30%23</item>
        <item>*117*32%23</item>

    </string-array>
    <string-array name="jazzdatasms_name">
        <item>DAILY WHATSAPP and SMS</item>
        <item>WEEKLY WHATSAPP and SMS</item>
        <item>MONTHLY WHATSAPP and SMS</item>
    </string-array>
    <string-array name="jazzdatasms_description">
        <item>10 MB DATA WhatsApp \n​
            <b>SMS</b> 1800 \n
            <b>Price</b>           Rs.7.2  (Incl. Tax)Recharge Required Rs.8 \n<b>Code</b>             Dial *334#
        \n <b>Validity</b> 1 Day </item>
        <item>25 MB DATA WhatsApp \n​
            <b>SMS</b> 1500 \n
            <b>Price</b>           Rs.20  (Incl. Tax)Recharge Required Rs.23 \n<b>Code</b>             Dial *101*1*07#
        \n <b>Validity</b> 7 Day</item>
        <item>5 GB DATA WhatsApp \n​
            <b>SMS</b> 12000 \n
            <b>Price</b>           Rs.70  (Incl. Tax)Recharge Required Rs.79 \n<b>Code</b>             Dial *101*1*02#
        \n <b>Validity</b> 30 Day</item>
    </string-array>
    <string-array name="jazzdatasms_code">
        <item>*334%23</item>
        <item>*101*1*07%23</item>
        <item>*101*1*02%23</item>

    </string-array>
    <string-array name="jazzdatacall_name">
        <item>Jazz/Warid Har Din Bundle</item>
        <item>Jazz/Warid Super Plus</item>
        <item>Jazz/Warid Day Bundle</item>
        <item>Jazz/Warid Haftawar Offer</item>
        <item>Jazz/Warid All Network Package</item>

    </string-array>
    <string-array name="jazzdatacall_description">
        <item>500 On-net minutes
            50 MB
         <b>Price</b>           Rs 21.51  (Incl. Tax)Recharge Required Rs.25 \n<b>Code</b>             Dial *114*4#
        \n <b>Validity</b> 1 Day</item>
        <item>500 On-net minutes
           500MB, 500 SMS \n5 off-net minutes
         <b>Price</b>           Rs 28  (Incl. Tax)Recharge Required Rs.35 \n<b>Code</b>             Dial *558#
        \n <b>Validity</b> 1 Day</item>
        <item>300 minutes
           20MB, 300 SMS \n5 off-net minutes
         <b>Price</b>           Rs 13  (Incl. Tax)Recharge Required Rs.15 \n<b>Code</b>             Dial *340#
        \n <b>Validity</b> 1 Day</item>
        <item>1000 on-net minutes
           100 MB, 1000 SMS \n5 off-net minutes
         <b>Price</b>           Rs 85  (Incl. Tax)Recharge Required Rs.95 \n<b>Code</b>             Dial *407#
        \n <b>Validity</b> 7 Day</item>
        <item>1000 on-net minutes
           1 GB, 1000 SMS \n50 off-net minutes
         <b>Price</b>           Rs 155  (Incl. Tax)Recharge Required Rs.170 \n<b>Code</b>             Dial *700#
        \n <b>Validity</b> 7 Day</item>

    </string-array>
    <string-array name="jazzdatacall_code">
        <item>*114*4%23</item>
        <item>*558%23</item>
        <item>*340%23</item>
        <item>*407%23</item>
        <item>*700%23</item>
    </string-array>
    <string-array name="jazzdatahybrid_name">
        <item>DAILY DAY BUNDLE</item>
        <item>Super BUNDLE</item>
        <item>Super Plus Bundle</item>
        <item>Weekly Hybrid</item>
        <item>Weekly All Network</item>
        <item>Weekly Super Duper</item>
        <item>Mega Super Duper Weekly</item>
        <item>Monthly Hybrid</item>
        <item>Monthtly Super Duper</item>
        <item>Jazz/Warid Monthly All Rounder Package</item>
        <item>MONTHLY SUPER DUPER PLUS</item>


    </string-array>
    <string-array name="jazzdatahybrid_description">
        <item>
		20 MB DATA \n 300 Mins Jazz Mins \n300 SMS \n Rs.13(incl. Tax)\nRecharge Required Rs.17
		</item>
        <item>
            150 MB DATA\n 300 Jazz/Warid Mins\n Rs.17(incl. Tax)\nRecharge Required Rs.23
        </item>
        <item>
            500 Minutes Jazz/Warid Mins \n 5 Minutes Other Network Mins 500 SMS \n 500 MB DATA \n Rs.28(incl. Tax)\nRecharge Required Rs.37
        </item>
        <item>
		500 MB DATA \n1000 Mins Jazz/Warid Mins \n20 Other Network Mins \n1000 SMS \nRs. 115(incl. Tax)\nRecharge Required Rs.150
	  </item>
        <item>
	  1 GB DATA \n1000 Jazz/Warid Mins\n50 Other Network Mins\n1000 SMS\nRs.155(incl. Tax)\nRecharge Required Rs.200
	  </item>
        <item>
        3 GB DATA\n1500 Jazz/Warid Mins\n50 Other Network Mins \n1500 SMS\nRs.199(incl. Tax)\nRecharge Required Rs.250
        </item>
        <item>
	   10 GB DATA\n(5 GB 2AM - 2PM)\n5000 Jazz/Warid Mins\n50 Other Network Mins\n5000 SMS\nRs.222(incl. Tax)\nRecharge Required Rs.270
	  </item>
        <item>
		  1 GB DATA \n10000 Jazz/Warid Mins 333/Day(Unlimited On-net Mins Sunday)\n50 Other Network\n1000 SMS\n Price Rs. 444(incl. Tax)\nRecharge Required Rs.570
	  </item>

        <item>
		  3 GB DATA \n3000 Jazz/Warid Mins \n150 Other Network Mins \n3000 SMS \nPrice 577(incl. Tax)\nRecharge Required Rs.700
	  </item>
        <item>
		   200Free Off-Net Minutes\n 1500 Free SMS to All Networks\n5GB of Free Internet Data\n30 Days Vailidity\nRs. 596(incl. Tax)\nRecharge Required Rs.700
	  </item>

        <item>
		   10 GB DATA \n5000 Jazz/Warid Mins\n300 Other Network Mins\n5000 SMS\nRs.977(incl. Tax)\nRecharge Required Rs.1250
	  </item>
    </string-array>
    <string-array name="jazzdatahybrid_code">
        <item>*340%23</item>
        <item>*212%23</item>
        <item>*558%23</item>
        <item>*407%23</item>
        <item>*700%23</item>
        <item>*770%23</item>
        <item>*505%23</item>
        <item>*430%23</item>
        <item>*706%23</item>
        <item>*2000%23</item>
        <item>*707%23</item>

    </string-array>
    <string-array name="zongdatadata_name">
        <item>Daily Basic</item>
        <item>Daily Data Max</item>
        <item>Zong Day Time Offer</item>
        <item>Zong Good Night offer</item>
        <item>All-in-1 Daily</item>
        <item>Social Pack</item>
        <item>Facebook Daily</item>
        <item>Super Weekly Offer</item>
        <item>Super Weekly Plus</item>
        <item>Super Weekly Max</item>
        <item>Zong Shandaar Weekly Offer</item>
        <item>All-in-1 Weekly</item>
        <item>Haftawar Load Offer</item>
        <item>Monthly Mini 150</item>
        <item>Monthly Basic 500</item>
        <item>Monthly Premium 3GB</item>
        <item>Monthly Premium 30GB</item>
    </string-array>
</resources>